styx-format/src/snapshots/styx_format__cst_format__tests__multiline_object.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
server {
    host localhost
    port 8080
}
