styx-format/src/snapshots/styx_format__cst_format__tests__multiline_sequence_preserves_structure.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
items (
    a
    b
    c
)
