styx-format/src/snapshots/styx_format__cst_format__tests__nested_multiline_sequence.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
outer (
    (a b)
    // between
    (c d)
)
