styx-format/src/snapshots/styx_format__cst_format__tests__nested_objects.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
config {
    server {
        host localhost
    }
}
