styx-format/src/snapshots/styx_format__cst_format__tests__object_comments_with_blank_line.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
config {
    // first group
    // still first group

    // second group after blank line
    // still second group
}
