styx-format/src/snapshots/styx_format__cst_format__tests__object_mixed_entries_and_comments.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
settings {
    enabled true
    // disabled-option false
    name "test"
    // another-disabled option
}
