styx-format/src/snapshots/styx_format__cst_format__tests__object_with_only_comments.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
pre-commit {
    // generate-readmes false
    // rustfmt false
    // cargo-lock false
}
