styx-format/src/snapshots/styx_format__cst_format__tests__path_syntax_in_object.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
resources {
    limits cpu>500m memory>256Mi
    requests cpu>100m memory>128Mi
}
