styx-format/src/snapshots/styx_format__cst_format__tests__preserves_comments.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
// This is a comment
name Alice
/// Doc comment
age 30
