styx-format/src/snapshots/styx_format__cst_format__tests__schema_declaration.snap
---
source: crates/styx-format/src/cst_format.rs
expression: output
---
@schema schema.styx

name test
